--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -61,4 +61,5 @@ jobs:
             git fetch --all
             git reset --hard origin/main
             docker-compose build --no-cache
+            docker-compose down --remove-orphans
             docker-compose up -d --remove-orphans
