--- a/.github/workflows/api-deploy-staging.yml
+++ b/.github/workflows/api-deploy-staging.yml
@@ -61,5 +61,7 @@ jobs:
             cd /apps/tumai/space-staging
             git fetch --all
             git reset --hard origin/dev
+            cd api/
             docker-compose build --no-cache
+            docker-compose down --remove-orphans
             docker-compose up -d --remove-orphans
