--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -65,7 +65,7 @@ jobs:
             export DB_PORT=${{ env.DB_PORT }}
             export DB_NAME=${{ env.DB_NAME }}
             export DB_USER=${{ env.DB_USER }}
-            export DB_PASSWORD=${{ env.DB_PASSWORD }}
+            export DB_PASSWORD="${{ env.DB_PASSWORD }}"
             docker-compose build --no-cache
             docker-compose down --remove-orphans
             docker-compose up -d --remove-orphans
