bring .secrets into deployment container

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,3 +1,5 @@
+# For rootserver deployment only
+
 FROM mambaorg/micromamba:latest
 
 WORKDIR /apps/space/api
@@ -8,3 +10,4 @@ RUN micromamba install -y -n base -f environment.yml
 RUN mkdir .secrets
 
 COPY --chown=$MAMBA_USER:$MAMBA_USER . /apps/space/api
+COPY --chown=$MAMBA_USER:$MAMBA_USER .secrets /apps/space/api/.secrets
