--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -46,6 +46,8 @@ services:
       - MAIL_PORT=${MAIL_PORT}
       - MAIL_SERVER=${MAIL_SERVER}
       - MAIL_FROM_NAME=${MAIL_FROM_NAME}
+    volumes:
+      - .secrets/:/apps/space/api/.secrets/
 
 networks:
   backend-net:
