--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -25,10 +25,11 @@ services:
     build: .
     restart: unless-stopped
     command: gunicorn space_api.main:app -k uvicorn.workers.UvicornWorker --workers=4 --reload --bind=0.0.0.0
-    ports:
-      - '${API_PORT}:8000'
+    # ports:
+    #   - '${API_PORT}:8000'
     networks:
       - backend-net
+      - proxy-net
     environment:
       - PYTHONPATH=${PYTHONPATH}
       - environment=${ENVIRON}
@@ -53,3 +54,6 @@ networks:
   backend-net:
     driver: bridge
     name: backend-net
+  proxy-net:
+    driver: bridge
+    name: proxy-net
