--- a/app/package.json
+++ b/app/package.json
@@ -1,33 +1,36 @@
 {
-	"name": "space",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"lint": "eslint --ignore-path .esignorelint --ext .js,.jsx,.ts,.tsx .",
-		"preinstall": "npm run lint",
-		"start": "env-cmd -f .env next start",
-		"build": "env-cmd -f .env next build"
-	},
-	"dependencies": {
-		"@radix-ui/react-tabs": "^1.0.4",
-		"axios": "^1.3.4",
-		"downloadjs": "^1.4.7",
-		"eslint": "^8.29.0",
-		"eslint-config-next": "13.0.6",
-		"firebase": "^9.22.0",
-		"mobx": "^6.7.0",
-		"mobx-react": "^7.6.0",
-		"next": "^13.4.10",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-icons": "^4.7.1"
-	},
-	"devDependencies": {
-		"autoprefixer": "^10.4.13",
-		"env-cmd": "^10.1.0",
-		"postcss": "^8.4.19",
-		"tailwindcss": "^3.2.4",
-		"webpack": "^5.75.0"
-	}
+  "name": "space",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "lint": "eslint --ignore-path .esignorelint --ext .js,.jsx,.ts,.tsx .",
+    "preinstall": "npm run lint",
+    "start": "env-cmd -f .env next start",
+    "build": "env-cmd -f .env next build",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "@radix-ui/react-tabs": "^1.0.4",
+    "axios": "^1.3.4",
+    "downloadjs": "^1.4.7",
+    "eslint": "^8.29.0",
+    "eslint-config-next": "13.0.6",
+    "firebase": "^9.22.0",
+    "mobx": "^6.7.0",
+    "mobx-react": "^7.6.0",
+    "next": "^13.4.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "env-cmd": "^10.1.0",
+    "postcss": "^8.4.19",
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3",
+    "tailwindcss": "^3.2.4",
+    "webpack": "^5.75.0"
+  }
 }
