--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "lint": "eslint --ignore-path .esignorelint --ext .js,.jsx,.ts,.tsx .",
+    "lint": "next lint",
     "preinstall": "npm run lint",
     "start": "env-cmd -f .env next start",
     "build": "env-cmd -f .env next build",
