fix more compile errors

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -18,8 +18,10 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["./components/*"],
+      "@models/*": ["./models/*"],
       "@providers/*": ["./providers/*"],
       "@hooks/*": ["./hooks/*"],
+      "@config/*": ["./config/*"],
       "~/*": ["./src/*"]
     },
     "strict": false
