--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -58,8 +58,8 @@ jobs:
           port: 22
           script: |
             cd /apps/tumai/space
-            git fetch --all
-            git reset --hard origin/main
+            git checkout main
+            git pull
             cd api/
 
             # ENV VARIABLES NEEDED FOR BUILD
@@ -84,5 +84,5 @@ jobs:
             export MAIL_FROM_NAME="${{ env.MAIL_FROM_NAME }}"
 
             docker-compose build --no-cache
-            docker-compose down --remove-orphans
-            docker-compose up -d --remove-orphans
+            docker-compose -p tum-ai-space-api-prod down --remove-orphans
+            docker-compose -p tum-ai-space-api-prod up -d --remove-orphans
