--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "axios": "^1.3.4",
     "downloadjs": "^1.4.7",
     "eslint": "^8.29.0",
