--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,7 @@
     "react-icons": "^4.7.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.20",
+    "@types/react": "18.2.20",
     "autoprefixer": "^10.4.13",
     "env-cmd": "^10.1.0",
     "postcss": "^8.4.19",
