--- a/.github/workflows/api-deploy-staging.yml
+++ b/.github/workflows/api-deploy-staging.yml
@@ -59,6 +59,7 @@ jobs:
           port: 22
           script: |
             cd /apps/tumai/space-staging
+            git fetch
             git checkout dev
             git pull
             cd api/
