--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -58,6 +58,7 @@ jobs:
           port: 22
           script: |
             cd /apps/tumai/space
+            git fetch
             git checkout main
             git pull
             cd api/
