--- a/.github/workflows/app-all-push-commit.yml
+++ b/.github/workflows/app-all-push-commit.yml
@@ -1,11 +1,12 @@
 name: API CI - lint and pytest
 
 on:
-  push:
-    branches-ignore:
-      - main
+  pull_request:
     paths:
-    - 'app/**'
+      - 'app/**'
+    branches:
+      - main
+      - dev
   workflow_dispatch:
 
 jobs:
@@ -17,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup environment type
         working-directory: ./app
-        run: echo "REACT_APP_ENVIRONMENT=development" > .env
+        run: echo "NEXT_PUBLIC_ENVIRONMENT=development" > .env
       - name: CI & Build
         working-directory: ./app
         run: npm ci && npm run build
