--- a/.github/workflows/app-staging-pull-request.yml
+++ b/.github/workflows/app-staging-pull-request.yml
@@ -3,11 +3,9 @@
 
 name: Deploy to Firebase Hosting on PR to staging
 on:
-  pull_request:
-    paths:
-    - 'app/**'
+  push:
     branches:
-      - main
+      - dev
   workflow_dispatch:
 
 jobs:
@@ -17,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup environment type
         working-directory: ./app
-        run: echo "REACT_APP_ENVIRONMENT=staging" > .env
+        run: echo "NEXT_PUBLIC_ENVIRONMENT=staging" > .env && echo "NEXT_PUBLIC_API_URL=https://api.space.staging.tum-ai.com/" > .env
       - name: CI & Build
         working-directory: ./app
         run: npm ci && npm run build
