--- a/.github/workflows/app-main-merge.yml
+++ b/.github/workflows/app-main-merge.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup environment type
         working-directory: ./app
-        run: echo "NEXT_PUBLIC_ENVIRONMENT=production" > .env && echo "NEXT_PUBLIC_API_URL=https://api.space.tum-ai.com/" > .env
+        run: echo -e "NEXT_PUBLIC_ENVIRONMENT=production\nNEXT_PUBLIC_API_URL=https://api.space.tum-ai.com/" > .env
       - name: CI & Build
         working-directory: ./app
         run: npm ci && npm run build
