--- a/.github/workflows/app-staging-pull-request.yml
+++ b/.github/workflows/app-staging-pull-request.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup environment type
         working-directory: ./app
-        run: echo "NEXT_PUBLIC_ENVIRONMENT=staging" > .env && echo "NEXT_PUBLIC_API_URL=https://api.space.staging.tum-ai.com/" > .env
+        run: echo -e "NEXT_PUBLIC_ENVIRONMENT=staging\nNEXT_PUBLIC_API_URL=https://api.space.staging.tum-ai.com/" > .env
       - name: CI & Build
         working-directory: ./app
         run: npm ci && npm run build
