--- a/app/package.json
+++ b/app/package.json
@@ -16,11 +16,12 @@
     "axios": "^1.3.4",
     "downloadjs": "^1.4.7",
     "eslint": "^8.29.0",
-    "eslint-config-next": "13.0.6",
-    "firebase": "^9.22.0",
+    "eslint-config-next": "^13.4.19",
+    "firebase": "^10.3.0",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
-    "next": "^13.4.10",
+    "mobx-react-lite": "^4.0.3",
+    "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1"
