--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "checkJs": true,
     "skipLibCheck": true,
@@ -17,14 +21,31 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["./components/*"],
-      "@models/*": ["./models/*"],
-      "@providers/*": ["./providers/*"],
-      "@hooks/*": ["./hooks/*"],
-      "@config/*": ["./config/*"],
-      "~/*": ["./src/*"]
+      "@components/*": [
+        "./components/*"
+      ],
+      "@models/*": [
+        "./models/*"
+      ],
+      "@providers/*": [
+        "./providers/*"
+      ],
+      "@hooks/*": [
+        "./hooks/*"
+      ],
+      "@config/*": [
+        "./config/*"
+      ],
+      "~/*": [
+        "./src/*"
+      ]
     },
-    "strict": false
+    "strict": false,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     ".eslintrc.cjs",
@@ -32,7 +53,10 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.mjs"
+    "**/*.mjs",
+    "build/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
