--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,9 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/colors": "^2.1.0",
+		"@radix-ui/react-dialog": "^1.0.4",
+		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-tooltip": "^1.0.6",
 		"@types/node": "20.5.4",
@@ -16,6 +19,7 @@
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.15",
 		"axios": "^1.4.0",
+		"clsx": "^2.0.0",
 		"downloadjs": "^1.4.7",
 		"eslint": "8.47.0",
 		"eslint-config-next": "13.4.19",
@@ -29,6 +33,7 @@
 		"react-dom": "18.2.0",
 		"react-icons": "^4.7.1",
 		"tailwindcss": "3.3.3",
+		"tailwindcss-radix": "^2.8.0",
 		"typescript": "5.2.2"
 	}
 }
