--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.15",
 		"axios": "^1.4.0",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"downloadjs": "^1.4.7",
 		"eslint": "8.47.0",
@@ -32,6 +33,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.7.1",
+		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
 		"tailwindcss-radix": "^2.8.0",
 		"typescript": "5.2.2"
