--- a/app/package.json
+++ b/app/package.json
@@ -1,42 +1,50 @@
 {
-	"name": "app",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@radix-ui/colors": "^2.1.0",
-		"@radix-ui/react-avatar": "^1.0.3",
-		"@radix-ui/react-dialog": "^1.0.4",
-		"@radix-ui/react-icons": "^1.3.0",
-		"@radix-ui/react-tabs": "^1.0.4",
-		"@radix-ui/react-tooltip": "^1.0.6",
-		"@types/node": "20.5.4",
-		"@types/react": "18.2.21",
-		"@types/react-dom": "18.2.7",
-		"autoprefixer": "10.4.15",
-		"axios": "^1.4.0",
-		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.0.0",
-		"downloadjs": "^1.4.7",
-		"eslint": "8.47.0",
-		"eslint-config-next": "13.4.19",
-		"firebase": "^10.3.0",
-		"mobx": "^6.7.0",
-		"mobx-react": "^7.6.0",
-		"mobx-react-lite": "^4.0.3",
-		"next": "13.4.19",
-		"postcss": "8.4.28",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"react-icons": "^4.7.1",
-		"tailwind-merge": "^1.14.0",
-		"tailwindcss": "3.3.3",
-		"tailwindcss-radix": "^2.8.0",
-		"typescript": "5.2.2"
-	}
+  "name": "app",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "lint": "next lint",
+    "preinstall": "npm run lint",
+    "start": "env-cmd -f .env next start",
+    "build": "env-cmd -f .env next build",
+    "format": "prettier --write ."
+  },
+  "dependencies": {
+    "@radix-ui/colors": "^2.1.0",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@types/node": "20.5.4",
+    "@types/react-dom": "18.2.7",
+    "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "downloadjs": "^1.4.7",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.19",
+    "firebase": "^10.3.0",
+    "mobx": "^6.7.0",
+    "mobx-react": "^7.6.0",
+    "mobx-react-lite": "^4.0.3",
+    "next": "13.4.19",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-radix": "^2.8.0",
+    "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.21",
+    "autoprefixer": "10.4.15",
+    "env-cmd": "^10.1.0",
+    "postcss": "8.4.28",
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3",
+    "tailwindcss": "3.3.3",
+    "webpack": "^5.88.2"
+  }
 }
