--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "checkJs": true,
     "skipLibCheck": true,
@@ -21,30 +17,14 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
-      "@libs/*": [
-        "./libs/*"
-      ],
-      "@styles/*": [
-        "./styles/*"
-      ],
-      "@components/*": [
-        "./components/*"
-      ],
-      "@models/*": [
-        "./models/*"
-      ],
-      "@providers/*": [
-        "./providers/*"
-      ],
-      "@hooks/*": [
-        "./hooks/*"
-      ],
-      "@config/*": [
-        "./config/*"
-      ],
-      "~/*": [
-        "./src/*"
-      ]
+      "@libs/*": ["./libs/*"],
+      "@styles/*": ["./styles/*"],
+      "@components/*": ["./components/*"],
+      "@models/*": ["./models/*"],
+      "@providers/*": ["./providers/*"],
+      "@hooks/*": ["./hooks/*"],
+      "@config/*": ["./config/*"],
+      "~/*": ["./src/*"]
     },
     "strict": false,
     "plugins": [
@@ -63,7 +43,5 @@
     "build/types/**/*.ts",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
