--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,6 +17,7 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
+      "@styles/*": ["./styles/*"],
       "@components/*": ["./components/*"],
       "@models/*": ["./models/*"],
       "@providers/*": ["./providers/*"],
@@ -24,7 +25,12 @@
       "@config/*": ["./config/*"],
       "~/*": ["./src/*"]
     },
-    "strict": false
+    "strict": false,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     ".eslintrc.cjs",
@@ -32,7 +38,9 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.cjs",
-    "**/*.mjs"
+    "**/*.mjs",
+    "build/types/**/*.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
