--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-radix": "^2.8.0",
