--- a/app/package.json
+++ b/app/package.json
@@ -41,7 +41,8 @@
     "react-icons": "^4.7.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-radix": "^2.8.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/downloadjs": "^1.4.3",
