--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@tanstack/react-query": "^4.33.0",
     "@types/node": "20.5.4",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
