--- a/app/package.json
+++ b/app/package.json
@@ -13,10 +13,16 @@
   "dependencies": {
     "@radix-ui/colors": "^2.1.0",
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@tanstack/react-query": "^4.33.0",
     "@types/node": "20.5.4",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
@@ -26,18 +32,22 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.3.0",
+    "formik": "^2.4.3",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "mobx-react-lite": "^4.0.3",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-radix": "^2.8.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/downloadjs": "^1.4.3",
     "@types/react": "18.2.21",
     "autoprefixer": "10.4.15",
     "env-cmd": "^10.1.0",
