update chore workflow

--- a/.github/workflows/chore.yml
+++ b/.github/workflows/chore.yml
@@ -2,7 +2,7 @@ name: chore
 on:
   pull_request:
     branches:
-      - main
+      - dev
     types: 
       - opened
       - reopened
@@ -10,7 +10,7 @@ on:
       - synchronize
   push:
     branches:
-      - main
+      - dev
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
