--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -65,7 +65,7 @@ jobs:
             # pull repo
             cd /apps/tumai/space
             git fetch
-            git checkout main
+            git checkout dev
             git pull --force
             cd api/
 
