--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "@radix-ui/colors": "^2.1.0",
     "@radix-ui/react-avatar": "^1.0.3",
@@ -24,6 +25,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@tanstack/react-query": "^4.33.0",
+    "@tremor/react": "^3.8.1",
     "@types/node": "20.5.4",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
