--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "eslint-config-next": "13.4.19",
     "firebase": "^10.3.0",
     "formik": "^2.4.3",
+    "lucide-react": "^0.284.0",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "mobx-react-lite": "^4.0.3",
@@ -43,6 +44,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
     "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^2.8.0",
     "typescript": "5.2.2",
     "yup": "^1.2.0"
