--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -19,11 +19,12 @@
     "paths": {
       "@styles/*": ["./styles/*"],
       "@components/*": ["./components/*"],
+      "@lib/*": ["./lib/*"],
       "@models/*": ["./models/*"],
       "@providers/*": ["./providers/*"],
       "@hooks/*": ["./hooks/*"],
       "@config/*": ["./config/*"],
-      "~/*": ["./src/*"]
+      "@/*": ["./"]
     },
     "strict": false,
     "plugins": [
