--- a/app/package.json
+++ b/app/package.json
@@ -5,9 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "lint": "next lint",
-    "preinstall": "npm run lint",
-    "start": "env-cmd -f .env next start",
-    "build": "env-cmd -f .env next build",
+    "start": "next start",
+    "build": "next build",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -26,7 +25,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@tanstack/react-query": "^4.33.0",
-    "@types/node": "20.5.4",
+    "@types/node": "^20.8.2",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
@@ -49,12 +48,12 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^2.8.0",
-    "typescript": "5.2.2",
+    "typescript": "^5.2.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/downloadjs": "^1.4.3",
-    "@types/react": "18.2.21",
+    "@types/react": "^18.2.25",
     "autoprefixer": "10.4.15",
     "env-cmd": "^10.1.0",
     "postcss": "8.4.28",
