chore: switch deployment to vercel
chore: update build config

chore: update packages

chore: update build config

chore: add ci workflow for deploying to vercel

chore: remove unused config files

fix: building in wrong directory

log things

fix package manager thing

log things somewhere else

fix working dir thing

cleanup old actions

chore: update CI for environments

chore: update cors

chore: update deployment

chore: remove action for deployment to dev

chore: add env variable verification

chore: update deployment

fix: dev deployment

fix: linking to vercel project

loggin things

logging other things

update vercel thing

use vercel env variable

env vatiables

more env stuff

still doing env stuff

try fix axios base url env thing

fix axios base thing

fix prod deployment pls

--- a/api/config.yaml
+++ b/api/config.yaml
@@ -16,6 +16,9 @@ AUTH:
         # Should contain AUTH_WEBSITE_DOMAIN
         - 'http://space.tum-ai.com'
         - 'https://space.tum-ai.com'
+        - 'http://dev.space.tum-ai.com'
+        - 'https://dev.space.tum-ai.com'
+          # TODO: Remove the staging urls below
         - 'http://space.staging.tum-ai.com'
         - 'https://space.staging.tum-ai.com'
         - 'http://localhost'
