--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,60 +1,17 @@
-// {
-//   "compilerOptions": {
-//     "target": "es2017",
-//     "lib": ["dom", "dom.iterable", "esnext"],
-//     "allowJs": true,
-//     "checkJs": true,
-//     "skipLibCheck": true,
-//     "forceConsistentCasingInFileNames": true,
-//     "noEmit": true,
-//     "esModuleInterop": true,
-//     "module": "esnext",
-//     "moduleResolution": "node",
-//     "resolveJsonModule": true,
-//     "isolatedModules": true,
-//     "jsx": "preserve",
-//     "incremental": true,
-//     "noUncheckedIndexedAccess": true,
-//     "baseUrl": ".",
-//     "paths": {
-//       "@styles/*": ["./styles/*"],
-//       "@components/*": ["./components/*"],
-//       "@models/*": ["./models/*"],
-//       "@providers/*": ["./providers/*"],
-//       "@hooks/*": ["./hooks/*"],
-//       "@config/*": ["./config/*"],
-//       "~/*": ["./src/*"]
-//     },
-//     "strict": false,
-//     "plugins": [
-//       {
-//         "name": "next"
-//       }
-//     ]
-//   },
-//   "include": [
-//     ".eslintrc.cjs",
-//     "next-env.d.ts",
-//     "**/*.ts",
-//     "**/*.tsx",
-//     "**/*.cjs",
-//     "**/*.mjs",
-//     "build/types/**/*.ts",
-//     ".next/types/**/*.ts"
-//   ],
-//   "exclude": ["node_modules"]
-// }
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2017",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
+    "baseUrl": ".",
     "allowJs": true,
+    "checkJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
@@ -75,6 +32,7 @@
     }
   },
   "include": [
+    ".eslintrc.cjs",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
