Make small frontend adjustments to showcase authentication with Slack

--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "lint": "next lint",
     "start": "next start",
     "build": "next build",
@@ -37,18 +37,18 @@
     "clsx": "^2.0.0",
     "downloadjs": "^1.4.7",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.3",
     "firebase": "^10.3.0",
     "formik": "^2.4.3",
     "lucide-react": "^0.284.0",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "mobx-react-lite": "^4.0.3",
-    "next": "13.4.19",
+    "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
     "tailwind-merge": "^1.14.0",
