Streamline database to localhost

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,1 +1,4 @@
-# DATABASE_URL=postgres://postgres:password@localhost:15432/spacedb
+NEXT_PUBLIC_ENVIRONMENT=development
+NEXT_PUBLIC_API_URL=https://localhost:8000/
+NEXTAUTH_URL=https://localhost:3000
+DATABASE_URL=postgres://postgres:password@localhost:15432/spacedb
