feat: add slack authentication (#179)
Co-authored-by: Sofiia Danylchenko <sofiya.dan@gmail.com>
Co-authored-by: simonhng <simon.huang@tum.de>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,36 @@
-# DEVELOPMENT DOCKER-COMPOSE FILE
+version: '3.8'
 
-version: '3.9'
+# TODO docker ignore node_modules
 services:
-  space-db:
+  space:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/space
+    depends_on:
+      - db
+    environment:
+      - DATABASE_URL=postgres://postgres:password@host.docker.internal:15432/spacedb
+    networks:
+      - app-network
+
+  db:
     image: postgres:14-alpine
     restart: unless-stopped
-    hostname: space.db
-    container_name: space-db
+    container_name: spacedb
+    environment:
+      POSTGRES_DB: spacedb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
     volumes:
-      - .data/space_db/postgresql:/var/lib/postgresql/data/
+      - ./data/db:/var/lib/postgresql/data
     ports:
       - "15432:5432"
-    environment:
-      POSTGRES_USER: space-db
-      POSTGRES_PASSWORD: space-db
-      POSTGRES_DB: space-db
     networks:
-      - backend-net
-
-  # [CERTIFICATION API] #################################################
-  space.files:
-    image: httpd:latest
-    container_name: space.files
-    hostname: space.files
-    ports:
-      - '9990:80'
-    volumes:
-      - ./.fileserver:/usr/local/apache2/htdocs
-    networks:
-      - backend-net
-  
-  cert:
-    hostname: cert
-    image: tum-ai-space-tools-certification-server
-    build: ./tools/certification-api
-    restart: unless-stopped
-    container_name: cert
-    command: npm run dev
-    ports:
-      - '3009:80'
-    networks:
-      - backend-net
+      - app-network
 
 networks:
-  backend-net:
-    driver: bridge
-    name: backend-net
+  app-network:
