chore: Enable HTTPS protocol for the Next.js server

--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "lint": "next lint",
     "start": "next start",
     "build": "next build",
