--- a/app/package.json
+++ b/app/package.json
@@ -36,8 +36,11 @@
     "@tanstack/react-table": "^8.11.3",
     "@tremor/cli": "^1.1.0",
     "@tremor/react": "^3.11.1",
+    "@types/eslint": "^8.56.3",
     "@types/node": "^20.8.2",
     "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -45,8 +48,8 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
     "downloadjs": "^1.4.7",
-    "eslint": "8.47.0",
-    "eslint-config-next": "^14.0.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.0",
     "firebase": "^10.3.0",
     "formik": "^2.4.3",
     "init": "^0.1.2",
