fix receiving of tallySchema

--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:https": "next dev  --experimental-https",
     "lint": "next lint",
     "start": "next start",
     "build": "next build",
