added env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-NEXT_PUBLIC_VERCEL_ENVIRONMENT=development
-NEXT_PUBLIC_ENVIRONMENT=development
-NEXT_PUBLIC_API_URL=https://localhost:8000/
-NEXTAUTH_URL=https://localhost:3000
+NEXTAUTH_SECRET=abcd123
 DATABASE_URL=postgres://postgres:password@localhost:15432/spacedb
+SLACK_CLIENT_ID=123.123
+SLACK_CLIENT_SECRET=abc
+NEXT_PUBLIC_VERCEL_ENV=production
+TALLY_SIGNING_SECRET=secret
