--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ SLACK_CLIENT_ID=123.123
 SLACK_CLIENT_SECRET=abc
 NEXT_PUBLIC_VERCEL_ENV=production
 TALLY_SIGNING_SECRET=secret
+NEXTAUTH_URL=https://localhost:3000
